--- a/style.css
+++ b/style.css
@@ -1,1 +1,28 @@
-/* Your CSS styles go here */
+h1{color: blue}
+
+
+#foo{
+	text-align: center;
+	font-size: 18px;
+	
+    border-style: solid;
+    border-width: 5px;
+    border-color: gray;
+}
+
+h2{
+	font-size:50px;
+	color: green;
+}
+
+p{
+	font-size: 20px;
+	text-align:center;
+}
+
+div {
+    width: 1520px;
+     padding: 10px;
+     border: 5px solid blue;
+     margin: 0; 
+} 
