--- a/examples/media queries/style.css
+++ b/examples/media queries/style.css
@@ -31,8 +31,9 @@
 
 @media (max-width: 860px) and (min-width: 576px) {
   .section-one {
-    width: 30%;
+    width: 55%;
     font-size: 24px;
+    background-color: #00ffcc;
   }
   .section-two {
     width: 55%;
